# Spark---Notion

./: README.md
.github/workflows/: release.yml
spark/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
spark/.github/workflows/: release.yml
spark/src/: App.tsx  index.css
spark/src-tauri/: Cargo.toml  tauri.conf.json
spark/src-tauri/capabilities/: default.json
spark/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  sync.rs  tags.rs  url_title.rs
spark/src/lib/: notes.ts
spark/src/pages/: Library.tsx  Overlay.tsx  Toast.tsx
spark/src/store/: notesStore.ts
